# reaper-rs

./: .gitignore  .gitmodules  .tokeignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: linux-aarch64.yml  linux-armv7.yml  linux-x86_64.yml  linux.yml  macos-aarch64.yml  macos-arm.yml  macos-x86_64.yml  macos.yml  main.yml  osx.yml  windows-i686.yml  windows-x86_64.yml  windows.yml
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml  build.rs
main/common-types/: Cargo.toml
main/common-types/src/: bpm.rs  constants.rs  db.rs  duration_in_beats.rs  duration_in_quarter_notes.rs  duration_in_seconds.rs  hz.rs  lib.rs  linear_volume_value.rs  macros.rs  pan_value.rs  position_in_beats.rs  position_in_pulses_per_quarter_note.rs  position_in_quarter_notes.rs  position_in_seconds.rs  rgb_color.rs  semitones.rs
main/fluent/: Cargo.toml  README.md
main/fluent/src/: access.rs  fx.rs  fx_chain.rs  lib.rs  model.rs  project.rs  reaper.rs  track.rs  util.rs
main/fluent/tests/ui/: prevent_read_after_delete.rs  prevent_read_after_delete.stderr
main/high/: Cargo.toml
main/high/src/: accelerator.rs  action.rs  bookmark.rs  change_detection_middleware.rs  change_detector.rs  chunk.rs  control_surface_performance_monitor.rs  crash_handler.rs  debug_util.rs  error.rs  event_loop_executor.rs  fx.rs  fx_chain.rs  fx_parameter.rs  guid.rs  helper_control_surface.rs  helper_middleware.rs  item.rs  lib.rs  local_run_loop_executor.rs  log_util.rs  main_future_middleware.rs  main_task_middleware.rs  meter_middleware.rs  metering.rs  middleware_control_surface.rs  midi_input_device.rs  midi_output_device.rs  mutex_util.rs  normalized_value.rs  option_util.rs  pan.rs  play_rate.rs  project.rs  reaper.rs  reaper_session.rs  reaper_simple.rs  run_loop_executor.rs  run_loop_scheduler.rs  section.rs  (+10 more)
main/lib/reaper/: reaper_plugin.h
main/low/: Cargo.toml  build.rs
main/low/lib/reaper/: coolscroll_reaper_plugin_functions.h  more_reaper_plugin_functions.h  reaper_plugin.h  reaper_plugin_functions.h
main/low/src/: bindings.rs  control_surface.cpp  control_surface.hpp  control_surface.rs  file_in_project_callback.rs  gaccel_register.rs  lib.rs  macros.rs  manual_bindings.rs  midi.cpp  midi.hpp  midi.rs  pcm_sink.cpp  pcm_sink.hpp  pcm_sink.rs  pcm_source.cpp  pcm_source.hpp  pcm_source.rs  pitch_shift.cpp  pitch_shift.hpp  pitch_shift.rs  plugin_context.rs  project_state_context.cpp  project_state_context.hpp  project_state_context.rs  raw.rs  reaper.rs  reaper_impl.rs  reaper_plugin_context.rs  resample.cpp  resample.hpp  resample.rs  static_context.rs  swell-modstub-custom.mm  swell-modstub-generic-custom.cpp  swell.rs  swell_impl.rs  util.rs  wrapper.hpp
main/low/tests/: version-numbers.rs
main/macros/: CHANGELOG.md  Cargo.toml
main/macros/src/: lib.rs
main/main/: Cargo.toml
main/main/src/: lib.rs
main/medium/: CHANGELOG.md  Cargo.toml
main/medium/src/: accelerator_register.rs  audio_hook_register.rs  automation_mode.rs  constants.rs  control_surface.rs  custom_action_register.rs  enums.rs  errors.rs  file_in_project_hook.rs  flags.rs  fn_traits.rs  gaccel_register.rs  infostruct_keeper.rs  keeper.rs  key_enums.rs  lib.rs  macros.rs  message_box.rs  midi.rs  misc_enums.rs  misc_newtypes.rs  mutex.rs  pcm_sink.rs  pcm_source.rs  pitch_shift.rs  plugin_context.rs  preview_register.rs  project_state_context.rs  ptr_macros.rs  ptr_wrappers.rs  real_time_reaper.rs  realtime_reaper.rs  reaper.rs  reaper_functions.rs  reaper_pointer.rs  reaper_session.rs  reaper_version.rs  recording_input.rs  recording_mode.rs  resample.rs  (+3 more)
main/medium/src/metering/: mod.rs  nano_response_time.rs  single_threaded_hdr_histogram.rs
main/rppxml-parser/: Cargo.toml
main/rppxml-parser/src/: lib.rs
main/rppxml-parser/src/examples/: fx-chain-tag.rpp
main/rx/: Cargo.toml
main/rx/src/: action.rs  control_surface.rs  lib.rs  main_thread.rs  midi.rs  scheduling.rs  types.rs
main/src/: experiment.rs  lib.rs
main/src/high_level/: action.rs  action_character.rs  automation_mode.rs  chunk.rs  fx.rs  fx_chain.rs  fx_parameter.rs  guid.rs  helper_control_surface.rs  input_monitoring_mode.rs  log_util.rs  message_box.rs  midi_event.rs  midi_input_device.rs  midi_message.rs  midi_output_device.rs  mod.rs  normalized_value.rs  pan.rs  parameter_type.rs  project.rs  reaper.rs  recording_input.rs  section.rs  tempo.rs  track.rs  track_send.rs  undo_block.rs  util.rs  volume.rs
main/src/low_level/: bindgen.h  bindgen.hpp  bindings.rs  control_surface.cpp  control_surface.hpp  control_surface.rs  midi.hpp  midi.rs  mod.rs  reaper.rs  reaper_impl.rs  reaper_plugin_context.rs  surface.cpp  surface.h  types.rs  util.rs
main/src/medium_level/: automation_mode.rs  constants.rs  control_surface.rs  message_box.rs  midi.rs  mod.rs  ptr_macros.rs  ptr_wrappers.rs  reaper.rs  recording_input.rs  string_types.rs  util.rs
src/: bindgen.h  high_level.rs  integration_tests.rs  lib.rs  low_level.rs  medium_level.rs  types.rs
src/high_level/: mod.rs  project.rs  reaper.rs  track.rs
src/low_level/: bindgen.h  bindings.rs  types.rs
src/medium_level/: mod.rs
test/: Cargo.toml
test-extension-plugin/: Cargo.toml
test-plugin/: Cargo.toml
test-plugin/src/: lib.rs
test-vst-plugin/: Cargo.toml
test-vst-plugin/src/: lib.rs
test/src/: api.rs  assert.rs  lib.rs  mock.rs  tests.rs
test/test/: Cargo.toml
test/test-extension-plugin/: Cargo.toml
test/test-extension-plugin/src/: lib.rs
test/test-extension-plugin/tests/: reaper_integration_test.rs
test/test-vst-plugin/: Cargo.toml
test/test-vst-plugin/src/: lib.rs
test/test/src/: api.rs  assert.rs  lib.rs  tests.rs
test/test/src/media/: test.mid
