[workspace]
resolver = "2"
members = [
    "main/common-types",
    "main/fluent",
    "main/low",
    "main/medium",
    "main/high",
    "main/rx",
    "main/macros",
    "main/rppxml-parser",
    "test/test",
    "test/test-extension-plugin",
    "test/test-vst-plugin"
]

[workspace.dependencies]
tracing = "0.1.40"