[workspace]
resolver = "2"
members = [
    "main/common-types",
    "main/fluent",
    "main/low",
    "main/medium",
    "main/high",
    "main/rx",
    "main/macros",
    "main/rppxml-parser",
    "test/test",
    "test/test-extension-plugin",
    "test/test-vst-plugin"
]

[workspace.dependencies]
reaper-rx = { path = "main/rx" }
reaper-high = { path = "main/high" }
reaper-medium = { path = 'main/medium' }
reaper-low = { path = 'main/low' }
reaper-common-types = { path = "main/common-types" }
reaper-macros = { path = "main/macros" }
reaper-test = { path = "test/test" }
tracing = "0.1.40"
c_str_macro = "1.0.2"
vst = "*"
derive_more = "0.99.5"
downcast-rs = "1.1.1"
fragile = "2.0.0"
winapi = "0.3"
libc = "0.2"
version-sync = "0.9.2"
cc = "1.2.10"
bindgen = "0.52.0"
quote = "1.0.2"
syn = "1.0.14"
proc-macro2 = "1.0.8"
phf = "0.8"
nutype = { git = "https://github.com/helgoboss/nutype.git", branch = "feature/new_unchecked_const" }
#nutype = { path = "../../../nutype/nutype" }
serde = "1.0"
palette = "0.7.4"
hex-literal = "0.4.1"
serde_json = "1.0.114"
trybuild = "1.0"
once_cell = "1.3.1"
crossbeam-channel = "0.5"
helgoboss-midi = "0.4.0"
regex = "1.3.4"
num_enum = "0.4.2"
futures = "0.3"
serde_yaml = "0.8"
backtrace = "0.3"
ref-cast = "1.0.6"
pathdiff = "0.2.0"
enumflags2 = "0.7.4"
either = "1.8.0"
csv = "1.1"
base64 = "0.13.0"
itertools = "0.10.5"
camino = "1.1.7"
derivative = "2.2.0"
sentry = { version = "0.35.0", default-features = false }
darling = "0.10.2"
doc-comment = "0.3.3"
splitty = "1.0.1"
rxrust = { git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83" }
approx = "0.3.2"
reqwest = "0.12.12"
tar = "0.4.26"
xz2 = "0.1"
wait-timeout = "0.1.5"
fs_extra = "1.2.0"
futures-timer = "3.0.2"
anyhow = "1.0.95"