[package]
name = "reaper-rs"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO Medium and especially high API should be optional features

[dependencies]
#overloadable = "0.4.1"
c_str_macro = "1.0.2"
once_cell = "1.3.1"
vst = "0.2.0"
rxrust = { path = '../lib/rxRust'}
regex = "1.3.4"
slog = "2.5.2"
slog-stdlog = "4.0.0"
slog-term = "2.5.0"

[build-dependencies]
bindgen = "0.52.0"
cc = "1.0.50"