[package]
name = "reaper-rs"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"
build = "build.rs"

[features]
# By default, only the low-level API is enabled
default = []
# Enables the medium-level API (which depends on the low-level API)
medium-level = ["num_enum"]
# Enables the high-level API (which depends on the medium-level and low-level APIs)
high-level = ["medium-level", "once_cell", "rxrust", "helgoboss-midi", "regex", "slog", "slog-stdlog", "slog-term"]
# Regenerates `bindings.rs` from C++ header files and right after that low-level `reaper.rs` from `bindings.rs`
generate-low-level-reaper = ["bindgen", "quote", "syn"]

[dependencies]
c_str_macro = "1.0.2"
vst = "0.2.0"
once_cell = {version = "1.3.1", optional = true}
# TODO Use crates.io version
rxrust = { path = '../lib/rxRust', optional = true}
# TODO Use crates.io version
helgoboss-midi = { path = '../../helgoboss-midi-rs', optional = true }
regex = { version = "1.3.4", optional = true }
slog = { version = "2.5.2", optional = true }
slog-stdlog = { version = "4.0.0", optional = true }
slog-term = { version = "2.5.0", optional = true }
num_enum = { version = "0.4.2", optional = true }

[build-dependencies]
cc = "1.0.50"
bindgen = { version = "0.52.0", optional = true }
quote = { version = "1.0.2", optional = true }
syn = { version = "1.0.14", features = ["full"], optional = true }