[package]
name = "reaper-rs-test-extension-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"


[dependencies]
reaper-rs = { path = "../main" }
reaper-rs-test = { path = "../test" }
reaper-rs-macros = { path = "../macros" }
c_str_macro = "1.0.2"
rxrust = { path = '../lib/rxRust'}
slog = "2.5.2"

[lib]
name = "reaper_rs_test_extension_plugin"
crate-type = ["cdylib"]