[package]
name = "reaper-rs-test-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"


[dependencies]
reaper-rs = { path = "../main" }
reaper-rs-test = { path = "../test" }
c_str_macro = "1.0.2"
rxrust = { path = '../lib/rxRust'}

[lib]
name = "reaper_rs_test_plugin"
crate-type = ["cdylib"]