[package]
name = "reaper-rs-test"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"


[dependencies]
reaper-rs = { path = "../main", features = ["high-level"] }
c_str_macro = "1.0.2"
rxrust = { path = '../lib/rxRust'}
slog = "2.5.2"
helgoboss-midi = { path = '../../helgoboss-midi-rs' }