[package]
name = "reaper-common-types"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
color-macros = ["dep:hex-literal"]

[dependencies]
nutype = { git = "https://github.com/helgoboss/nutype.git", branch = "feature/new_unchecked_const", features = ["new_unchecked", "serde"] }
#nutype = { path = "../../../nutype/nutype", features = ["new_unchecked", "serde"] }
serde = { version = "1.0", features = ["derive"] }
palette = { version = "0.7.4", optional = true }
hex-literal = { version = "0.4.1", optional = true }

[dev-dependencies]
serde_json = "1.0.114"