[package]
name = "reaper-common-types"
version = "0.1.0"
license = "MIT"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
color-macros = ["dep:hex-literal"]

[dependencies]
nutype = { workspace = true, features = ["new_unchecked", "serde"] }
#nutype = { path = "../../../nutype/nutype", features = ["new_unchecked", "serde"] }
serde = { workspace = true, features = ["derive"] }
palette = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true