[package]
name = "reaper-high"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - high-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
publish = false

[dependencies]
c_str_macro = "1.0.2"
once_cell = "1.3.1"
crossbeam-channel = "0.5"
reaper-medium = { path = '../medium' }
reaper-low = { path = '../low' }
helgoboss-midi = "0.4.0"
regex = "1.3.4"
slog = "2.5.2"
slog-stdlog = "4.1.0"
slog-term = "2.5.0"
num_enum = "0.4.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = "0.8"
backtrace = "0.3"
ref-cast = "1.0.6"
# For relativizing to project path
pathdiff = "0.2.0"
enumflags2 = "0.7.4"
either = "1.8.0"
# For parsing reaper-vstplugins files
csv = "1.1"
# For encoding VST chunks for REAPER
base64 = "0.13.0"
# For various things
itertools = "0.10.5"
# REAPER should expose all file paths as UTF-8. If not, it's a REAPER bug.
camino = "1.1.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }