[package]
name = "reaper-high"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - high-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
publish = false

[features]
# For reporting panics to Sentry or GlitchTip
sentry = ["dep:sentry"]

[dependencies]
c_str_macro.workspace = true
once_cell.workspace = true
crossbeam-channel.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
helgoboss-midi.workspace = true
# For main-thread-only access to some stuff
fragile.workspace = true
regex.workspace = true
tracing.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
backtrace.workspace = true
ref-cast.workspace = true
# For relativizing to project path
pathdiff.workspace = true
enumflags2.workspace = true
either.workspace = true
# For parsing reaper-vstplugins files
csv.workspace = true
# For encoding VST chunks for REAPER
base64.workspace = true
# REAPER should expose all file paths as UTF-8. If not, it's a REAPER bug.
camino.workspace = true
# For excluding some fields from Debug
derivative.workspace = true
# For reporting panics to Sentry or GlitchTip, if enabled.
# We insist on rustls instead of native-tls because we don't want libssl dependencies on Linux.
sentry = { workspace = true, optional = true, features = ["backtrace", "contexts", "panic", "reqwest", "debug-images", "rustls"] }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["psapi", "processthreadsapi", "winuser"] }