[package]
name = "reaper-rs-low"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - low-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2018"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
exclude = ["/lib"]
build = "build.rs"

[features]
default = []
# Regenerates `bindings.rs` from C++ header files and right after that `reaper.rs` from `bindings.rs`
generate = ["bindgen", "quote", "syn", "proc-macro2"]

[dependencies]
c_str_macro = "1.0.2"
vst = "0.2.0"

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
cc = "1.0.50"
bindgen = { version = "0.52.0", optional = true }
quote = { version = "1.0.2", optional = true }
syn = { version = "1.0.14", features = ["full"], optional = true }
proc-macro2 = { version = "1.0.8", optional = true }