[package]
name = "reaper-low"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - low-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2018"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
include = [
    "/lib/reaper/reaper_plugin.h",
    "/lib/WDL/WDL/swell/*.h",
    "/src",
    "/tests",
    "/build.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
]
build = "build.rs"

[features]
default = []

# Regenerates `bindings.rs` from C++ header files and right after that `reaper.rs` and `swell.rs` from `bindings.rs`.
generate = ["generate-stage-one", "generate-stage-two"]

# Stage 1 runs on Linux only.
# After stage 1 has runned, we should run stage 2 as well (because stage 2 depends on the results of stage 1).
generate-stage-one = ["generate-stage-two", "bindgen"]

# Stage 2 can run separately.
generate-stage-two = ["quote", "syn", "proc-macro2", "phf"]

[dependencies]
c_str_macro = "1.0.2"
vst = "*"
derive_more = "0.99.5"
downcast-rs = "1.1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
cc = "1.0.65"
bindgen = { version = "0.52.0", optional = true }
quote = { version = "1.0.2", optional = true }
syn = { version = "1.0.14", features = ["full"], optional = true }
proc-macro2 = { version = "1.0.8", optional = true }
phf = { version = "0.8", features = ["macros"], optional = true }