[package]
name = "reaper-low"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - low-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
include = [
    "/lib/reaper/reaper_plugin.h",
    "/lib/WDL/WDL/swell/*.h",
    "/src",
    "/tests",
    "/build.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
]
build = "build.rs"

[features]
default = []

# Regenerates `bindings.rs` from C++ header files and right after that `reaper.rs` and `swell.rs` from `bindings.rs`.
generate = ["generate-stage-one", "generate-stage-two"]

# Stage 1 runs on Linux only.
# After stage 1 has runned, we should run stage 2 as well (because stage 2 depends on the results of stage 1).
generate-stage-one = ["generate-stage-two", "bindgen"]

# Stage 2 can run separately.
generate-stage-two = ["quote", "syn", "proc-macro2", "phf"]

[dependencies]
c_str_macro.workspace = true
vst.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
fragile.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["winuser", "winbase", "wingdi", "libloaderapi"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
version-sync.workspace = true

[build-dependencies]
cc = "1.0.65"
bindgen = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, features = ["full"], optional = true }
proc-macro2 = { workspace = true, optional = true }
phf = { workspace = true, features = ["macros"], optional = true }