[package]
name = "reaper-macros"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - macros"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2018"
categories = ["api-bindings", "multimedia", "multimedia::audio"]

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full"] }
darling = "0.10.2"

[dev-dependencies]
reaper-low = { version = "0.1.0", path = "../../main/low" }
reaper-medium = { version = "0.1.0", path = "../../main/medium" }
reaper-high = { path = "../../main/high" }
vst = "*"
doc-comment = "0.3.3"
version-sync = "0.9"

[lib]
proc-macro = true