[package]
name = "reaper-macros"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - macros"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["full"] }
darling.workspace = true

[dev-dependencies]
reaper-low.workspace = true
reaper-medium.workspace = true
doc-comment.workspace = true
version-sync.workspace = true

[lib]
proc-macro = true