[package]
name = "reaper-medium"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - medium-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2018"
categories = ["api-bindings", "multimedia", "multimedia::audio"]

[features]
# Activates measuring of REAPER function execution times.
reaper-meter = ["metered", "serde"]

[dependencies]
c_str_macro = "1.0.2"
derive_more = "0.99.5"
reaper-low = { version = "0.1.0", path = "../low" }
reaper-macros = { path = "../macros" }
helgoboss-midi = "*"
enumflags2 = { version = "^0.6", features = ["not_literal"] }
vst = "*"
metered = { version = "0.7.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
ref-cast = "1.0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "synchapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
version-sync = "0.9"