[package]
name = "reaper-medium"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - medium-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]

[dependencies]
c_str_macro = "1.0.2"
derive_more = "0.99.5"
reaper-common-types = { version = "0.1.0", path = "../common-types" }
reaper-low = { version = "0.1.0", path = "../low" }
reaper-macros = { path = "../macros" }
helgoboss-midi = "0.4.0"
enumflags2 = { version = "0.7.4", features = ["serde"] }
vst = "*"
serde = { version = "1.0", features = ["derive"], optional = true }
ref-cast = "1.0.6"
# REAPER should expose all file paths as UTF-8. If not, it's a REAPER bug.
camino = "1.1.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "synchapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
version-sync = "0.9.2"