[package]
name = "reaper-medium"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Bindings for the REAPER C++ API - medium-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]

[dependencies]
derive_more.workspace = true
reaper-common-types.workspace = true
reaper-low.workspace = true
helgoboss-midi.workspace = true
enumflags2 = { workspace = true, features = ["serde"] }
vst.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
ref-cast.workspace = true
tracing.workspace = true
# REAPER should expose all file paths as UTF-8. If not, it's a REAPER bug.
camino.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["winuser", "synchapi"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
version-sync = "0.9.2"