[package]
name = "reaper-rx"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "rxRust integration for the reaper-rs high-level API"
repository = "https://github.com/helgoboss/reaper-rs"
readme = "../../README.md"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
edition = "2021"
categories = ["api-bindings", "multimedia", "multimedia::audio"]
publish = false

[dependencies]
reaper-high = { path = '../high' }
reaper-medium = { path = '../medium' }
helgoboss-midi = "0.4.0"
rxrust = { git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83" }
crossbeam-channel = "0.5"
slog = "2.5.2"