[package]
name = "reaper-test-extension-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"
publish = false


[dependencies]
reaper-high = { path = "../../main/high" }
reaper-low = { path = "../../main/low" }
reaper-test = { path = "../test" }
reaper-macros = { path = "../../main/macros" }
c_str_macro = "1.0.2"
rxrust = "0.8.3"
slog = "2.5.2"

[lib]
name = "reaper_test_extension_plugin"
crate-type = ["cdylib"]