[package]
name = "reaper-test-extension-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"
publish = false

[features]
default = ["run-reaper-integration-test"]

# Linux only: When testing with this feature enabled, REAPER will be fired up (a dedicated downloaded instance)
# executing the reaper-rs integration tests. Even works on headless systems.
run-reaper-integration-test = []

[dependencies]
reaper-high = { path = "../../main/high" }
reaper-low = { path = "../../main/low" }
reaper-test = { path = "../test" }
reaper-macros = { path = "../../main/macros" }
c_str_macro = "1.0.2"
slog = "2.5.2"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
tar = "0.4.26"
xz2 = "0.1"
wait-timeout = "0.1.5"

[lib]
name = "reaper_test_extension_plugin"
crate-type = ["cdylib"]