[package]
name = "reaper-test-extension-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
edition = "2021"
publish = false

[features]
default = ["run-reaper-integration-test"]

# Linux only: When testing with this feature enabled, REAPER will be fired up (a dedicated downloaded instance)
# executing the reaper-rs integration tests. Even works on headless systems.
run-reaper-integration-test = []

[dependencies]
reaper-high.workspace = true
reaper-low.workspace = true
reaper-test.workspace = true
reaper-macros.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true
tar.workspace = true
xz2.workspace = true
wait-timeout.workspace = true
fs_extra.workspace = true

[lib]
name = "reaper_test_extension_plugin"
crate-type = ["cdylib"]