[package]
name = "reaper-test-vst-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2018"
publish = false

[dependencies]
reaper-rx = { path = "../../main/rx" }
reaper-high = { path = "../../main/high" }
reaper-medium = { path = "../../main/medium" }
reaper-low = { path = "../../main/low" }
reaper-test = { path = "../test" }
c_str_macro = "1.0.2"
rxrust = { git = "https://github.com/helgoboss/rxRust", branch = "reaper-rs" }
vst = "*"
futures-timer = "3.0.2"
slog = "2.5.2"

[lib]
name = "reaper_test_vst_plugin"
crate-type = ["cdylib"]