[package]
name = "reaper-test-vst-plugin"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
reaper-rx.workspace = true
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-test.workspace = true
rxrust.workspace = true
vst.workspace = true
futures-timer.workspace = true
tracing.workspace = true

[lib]
name = "reaper_test_vst_plugin"
crate-type = ["cdylib"]