[package]
name = "reaper-test"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false


[dependencies]
reaper-rx = { path = "../../main/rx" }
reaper-high = { path = "../../main/high" }
reaper-medium = { path = "../../main/medium" }
reaper-low = { path = "../../main/low" }
c_str_macro = "1.0.2"
rxrust = { git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83" }
slog = "2.5.2"
helgoboss-midi = "0.4.0"
approx = "0.3.2"
once_cell = "1.5.2"
crossbeam-channel = "0.5"