[package]
name = "reaper-test"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
edition = "2021"
publish = false


[dependencies]
reaper-rx.workspace = true
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
c_str_macro.workspace = true
rxrust.workspace = true
tracing.workspace = true
helgoboss-midi.workspace = true
approx.workspace = true
once_cell.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true